dataset1235/2025-2/2318198438/users/867892000/executions/1897677159_1927446959.log
== SUBMISSION (2025-08-20 17:57:55)
-- CODE: 
n = float(input(""))
t1 =   (27/100)*n
t2 = (n + (42/100)*n)
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 17:55:25)
-- CODE: 
n = float(input(""))
t1 = (27/100)*n
t2 = (42/100)*n
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:55:30)
-- CODE: 
n = float(input(""))
t1 = (27/100)*n
t2 = (42/100)*n
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:54:54)
-- CODE: 
n = float(input(""))
t1 = (27/100)*n
t2 = (42/100)*n
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:55:14)
-- CODE: 
n = float(input(""))
t1 = (27/100)*n
t2 = (42/100)*n
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:57:43)
-- CODE: 
n = float(input(""))
t1 =   (27/100)*n
t2 = (n + (42/100)*n)
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:56:47)
-- CODE: 
n = float(input(""))
t1 = (n + (27/100)*n)
t2 = (42/100)*n
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:54:39)
-- CODE: 
n = float(inpu(""))
t1 = (27/100)*n
t2 = (42/100)*n
t3 = (n - (63/100)*n)
print(round(t1, 2))
print(round(t2, 2))
print(round(t3, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpu(""))
              ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpu(""))
              ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpu(""))
              ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpu(""))
              ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpu(""))
              ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpu(""))
              ^^^^
NameError: name 'inpu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
